--- a/assets/css/3-sections/_portfolio.sass
+++ b/assets/css/3-sections/_portfolio.sass
@@ -1,6 +1,35 @@
-+artDirect(portfolio)
-
 .portfolio
+  background:
+    color: #090909
+    size: cover
+    position: 50% 50%
+    repeat: no-repeat
+    
+  /* Media Queries for the responsive background */
+  @include artDir('../img/bgs/portfolio/375x200')
+
+  // 376px
+  @include artDir('../img/bgs/portfolio/576x200', 23.5em)
+
+  // 576px
+  @include artDir('../img/bgs/portfolio/768x200', 36em)
+
+  // 768px
+  @include artDir('../img/bgs/portfolio/816x200', 48em)
+
+  // 816px
+  @include artDir('../img/bgs/portfolio/992x300', 51em)
+
+  // 992px
+  @include artDir('../img/bgs/portfolio/1200x300', 62em)
+
+  // 1200px
+  @include artDir('../img/bgs/portfolio/1600x300', 75em)
+
+  // 1600px
+  @include artDir('../img/bgs/portfolio/maxx300', 100em)
+  /* END of Media Queries for the responsive background */
+    
   .container
     display: flex
 
