Add art-direct bgs to the Staff Section

--- a/_includes/staff.html
+++ b/_includes/staff.html
@@ -11,7 +11,7 @@
         </div><!-- .member__info-border -->
       </div><!-- .member__desc -->
 
-      <div class="member__image col-md-6">
+      <div class="member__image member__image--adrianna-bg col-md-6">
         <div class="member__image-border"></div><!-- .member__image-border -->
       </div><!-- .member__image -->
     </div><!-- .member -->
