--- a/assets/css/3-sections/_hero.sass
+++ b/assets/css/3-sections/_hero.sass
@@ -11,27 +11,13 @@
     
   /* Media Queries for the responsive background */
   @include artDir('../img/bgs/hero/375x460')
-
-  // 376px
-  @include artDir('../img/bgs/hero/576x400', 23.5em)
-
-  // 576px
-  @include artDir('../img/bgs/hero/768x400', 36em)
-
-  // 768px
-  @include artDir('../img/bgs/hero/816x400', 48em)
-
-  // 816px
-  @include artDir('../img/bgs/hero/992x620', 51em)
-
-  // 992px
-  @include artDir('../img/bgs/hero/1200x620', 62em)
-
-  // 1200px
-  @include artDir('../img/bgs/hero/1600x620', 75em)
-
-  // 1600px
-  @include artDir('../img/bgs/hero/maxx620', 100em)
+  @include artDir('../img/bgs/hero/576x400', 23.5em) // 376px
+  @include artDir('../img/bgs/hero/768x400', 36em) // 576px
+  @include artDir('../img/bgs/hero/816x400', 48em) // 768px
+  @include artDir('../img/bgs/hero/992x620', 51em) // 816px
+  @include artDir('../img/bgs/hero/1200x620', 62em) // 992px
+  @include artDir('../img/bgs/hero/1600x620', 75em) // 1200px
+  @include artDir('../img/bgs/hero/maxx620', 100em) // 1600px
   /* END of Media Queries for the responsive background */
 
   &__btn
