--- a/assets/css/3-sections/_meet-us.sass
+++ b/assets/css/3-sections/_meet-us.sass
@@ -7,27 +7,13 @@
     
   /* Media Queries for the responsive background */
   @include artDir('../img/bgs/meet-us/375x200')
-
-  // 376px
-  @include artDir('../img/bgs/meet-us/576x200', 23.5em)
-
-  // 576px
-  @include artDir('../img/bgs/meet-us/768x200', 36em)
-
-  // 768px
-  @include artDir('../img/bgs/meet-us/816x200', 48em)
-
-  // 816px
-  @include artDir('../img/bgs/meet-us/992x300', 51em)
-
-  // 992px
-  @include artDir('../img/bgs/meet-us/1200x300', 62em)
-
-  // 1200px
-  @include artDir('../img/bgs/meet-us/1600x300', 75em)
-
-  // 1600px
-  @include artDir('../img/bgs/meet-us/maxx300', 100em)
+  @include artDir('../img/bgs/meet-us/576x200', 23.5em) // 376px
+  @include artDir('../img/bgs/meet-us/768x200', 36em) // 576px
+  @include artDir('../img/bgs/meet-us/816x200', 48em) // 768px
+  @include artDir('../img/bgs/meet-us/992x300', 51em) // 816px
+  @include artDir('../img/bgs/meet-us/1200x300', 62em) // 992px
+  @include artDir('../img/bgs/meet-us/1600x300', 75em) // 1200px
+  @include artDir('../img/bgs/meet-us/maxx300', 100em) // 1600px
   /* END of Media Queries for the responsive background */
 
   .container
