Add anchor links to the nav + smooth scrolling

--- a/_includes/growth.html
+++ b/_includes/growth.html
@@ -2,7 +2,7 @@
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <section class="growth container">
-  <div class="growth__wrapper row">
+  <div class="growth__wrapper row" id="growth">
 
       <div class="growth__col col-md-4">
         <div class="indicator-wrap">
