--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <!-- HERO
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
-<section class="hero">
+<section class="hero" id="home">
 
   <div class="lead">
     <p class="lead__text">Need our help?</p>
