--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,13 +1,13 @@
 <!-- PORTFOLIO
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
-<section class="portfolio">
-    <div class="container">
-  
-      <div class="lead lead--border">
-        <p class="lead__text">Check our projects!</p>
-        <h2 class="lead__title">portfolio</h2>
-      </div><!-- .lead -->
-  
-    </div><!-- .container -->
-  </section>
+<section class="portfolio" id="portfolio">
+  <div class="container">
+
+    <div class="lead lead--border">
+      <p class="lead__text">Check our projects!</p>
+      <h2 class="lead__title">portfolio</h2>
+    </div><!-- .lead -->
+
+  </div><!-- .container -->
+</section>
