--- a/_includes/brands.html
+++ b/_includes/brands.html
@@ -2,7 +2,7 @@
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <section class="brands">
-    <div class="container">
+    <div class="container" id="brands">
   
       <div class="lead lead--border">
         <p class="lead__text">We work for</p>
