--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <footer class="footer">
-  <div class="container">
+  <div class="container" id="contact">
     <div class="row">
       <div class="column col-6 offset-3 col-md-4 offset-md-0">
         <h2 class="column__title">our team</h2>
