--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <!-- NAVBAR
   //────  ──────────────────────────────────────────────────────────────────────────────────
   //────  ────────────────────────────────────────────────────────────────────────────────── -->
-  <nav class="main-navi navbar navbar-light bg-white">
+  <nav class="main-navi navbar fixed-top navbar-light bg-white">
     <div class="main-navi__container container">
 
       <a href="#" class="main-navi__brand navbar-brand">
@@ -69,17 +69,26 @@
             </li><!-- .social__item -->
           </ul><!-- .social__link --> 
 
-        <ul class="navbar-nav">
-          <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#" data-toggle="collapse">Home</a>
-          </li><!-- .nav-item -->
-          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#">Design</a>
-          </li><!-- .nav-item -->
-          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#">Contact</a>
-          </li><!-- .nav-item -->
-        </ul><!-- .navbar-nav -->
+        <div class="navbar-nav">
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="nav-link" href="#home">Home</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="nav-link" href="#growth">Growth</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="nav-link" href="#meet-us">Meet Us</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="nav-link" href="#brands">Brands</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="nav-link" href="#contact">Contact</a>
+          </div><!-- .nav-item -->
+        </div><!-- .navbar-nav -->
       </div><!-- .navbar-collapse -->
 
     </div><!-- .container -->
