--- a/_includes/meet-us.html
+++ b/_includes/meet-us.html
@@ -2,7 +2,7 @@
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
 <section class="meet-us">
-  <div class="container">
+  <div class="container" id="meet-us">
 
     <div class="lead lead--border">
       <p class="lead__text">Meet us!</p>
