Add fixes to the Footer Section
Move an anchor to the very top of the section.
Remove col-6 and offset-3 from the last column,
because they caused the website address to be off the centre.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- FOOTER
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
-<footer class="footer">
-  <div class="container" id="contact">
+<footer class="footer" id="contact">
+  <div class="container">
     <div class="row">
       <div class="column col-6 offset-3 col-md-4 offset-md-0">
         <h2 class="column__title">our team</h2>
@@ -14,7 +14,7 @@
         <p class="column__desc">We are the best company in the entire world!</p>
       </div><!-- .column -->
       
-      <div class="column col-6 offset-3 col-md-4 offset-md-0">
+      <div class="column col-md-4 offset-md-0">
         <h2 class="column__title">contact</h2>
         <p class="column__desc">
           <ul class="column__list">
@@ -29,6 +29,6 @@
 
   <div class="footer__copyrights">
     <p>Copyright &copy; DSGN free use!</p>
-    <p>Hand crafted by <a href="http://paulthedeveloper.com/">Paul The Developer</a></p>
+    <p>Hand crafted by <a href="http://paulthedeveloper.com/" target="_blank">Paul The Developer</a></p>
   </div><!-- .footer__copyrights -->
 </footer>
