Add fixes to the Navigation
Add hrefs to the social media links
Add padding top and bottom for all nav-items in the navigation

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -12,6 +12,9 @@
     margin-top: 1rem
     margin-bottom: 1rem
 
+  &__nav-item
+    padding: .9rem 0
+
 .social-and-toggler-wrapper
   display: flex
 
