--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,22 +17,22 @@
         
         <ul class="social social--desktop">
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="https://www.facebook.com/" target="_blank" class="social__link">
               <div class="fab fa-facebook-f"></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="https://www.instagram.com/" target="_blank" class="social__link">
               <div class="fab fa-instagram"></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="https://twitter.com/" target="_blank" class="social__link">
               <div class="fab fa-twitter"></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="https://uk.linkedin.com/" target="_blank" class="social__link">
               <div class="fab fa-linkedin"></div>
             </a><!-- .social__link -->
           </li><!-- .social__item -->
@@ -48,46 +48,46 @@
 
           <ul class="social social--mobile">
             <li class="social__item">
-              <a href="#" class="social__link">
+              <a href="https://www.facebook.com/" target="_blank" class="social__link">
                 <div class="fab fa-facebook-f"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
-              <a href="#" class="social__link">
+              <a href="https://www.instagram.com/" target="_blank" lass="social__link">
                 <div class="fab fa-instagram"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
-              <a href="#" class="social__link">
+              <a href="https://twitter.com/" target="_blank" class="social__link">
                 <div class="fab fa-twitter"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
-              <a href="#" class="social__link">
+              <a href="https://uk.linkedin.com/" target="_blank" class="social__link">
                 <div class="fab fa-linkedin"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
           </ul><!-- .social__link --> 
 
         <div class="navbar-nav">
-          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#home">Home</a>
-          </div><!-- .nav-item -->
-          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+          </div><!-- .main-navi__nav-item nav-item -->
+          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#growth">Growth</a>
-          </div><!-- .nav-item -->
-          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+          </div><!-- .main-navi__nav-item nav-item -->
+          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#meet-us">Meet Us</a>
-          </div><!-- .nav-item -->
-          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+          </div><!-- .main-navi__nav-item nav-item -->
+          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#portfolio">Portfolio</a>
-          </div><!-- .nav-item -->
-          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+          </div><!-- .main-navi__nav-item nav-item -->
+          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#brands">Brands</a>
-          </div><!-- .nav-item -->
-          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+          </div><!-- .main-navi__nav-item nav-item -->
+          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
             <a class="nav-link" href="#contact">Contact</a>
-          </div><!-- .nav-item -->
+          </div><!-- .main-navi__nav-item nav-item -->
         </div><!-- .navbar-nav -->
       </div><!-- .navbar-collapse -->
 
