Add fixes to the Hero section
Add href="#growth" for the .hero__arrow-link.
Change a <button> to a <a> because its more appropriate for its function..

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,9 +8,9 @@
     <h1 class="lead__title">Top designers</h1>
   </div><!-- .lead -->
   
-  <button type="button" class="hero__btn btn btn-outline-light">Check us!</button>
+  <a class="hero__btn btn btn-outline-light" href="#growth" role="button">Check us!</a>
 
-  <a class="hero__arrow-link" href="#">
+  <a class="hero__arrow-link" href="#growth">
     <img class="hero__arrow-image" src="{{site.baseurl}}/assets/img/double-arrow.svg" alt="double arrow pointing down" height="26px">
   </a><!-- .hero__arrow-link -->
 
