--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-custom.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 
         <!-- Google Fonts -->
