Change the smooth scrolling code from jquery to vanilla JS

--- a/_includes/growth.html
+++ b/_includes/growth.html
@@ -1,8 +1,8 @@
 <!-- PROGRESS
 //────  ──────────────────────────────────────────────────────────────────────────────────
 //────  ────────────────────────────────────────────────────────────────────────────────── -->
-<section class="growth container">
-  <div class="growth__wrapper row" id="growth">
+<section class="growth container" id="growth">
+  <div class="growth__wrapper row">
 
       <div class="growth__col col-md-4">
         <div class="indicator-wrap">
