--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
               </a><!-- .social__link -->
             </li><!-- .social__item -->
             <li class="social__item">
-              <a href="https://www.instagram.com/" target="_blank" lass="social__link">
+              <a href="https://www.instagram.com/" target="_blank" class="social__link">
                 <div class="fab fa-instagram"></div>
               </a><!-- .social__link -->
             </li><!-- .social__item -->
@@ -70,24 +70,24 @@
           </ul><!-- .social__link --> 
 
         <div class="navbar-nav">
-          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#home">Home</a>
-          </div><!-- .main-navi__nav-item nav-item -->
-          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#growth">Growth</a>
-          </div><!-- .main-navi__nav-item nav-item -->
-          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#meet-us">Meet Us</a>
-          </div><!-- .main-navi__nav-item nav-item -->
-          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
-          </div><!-- .main-navi__nav-item nav-item -->
-          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#brands">Brands</a>
-          </div><!-- .main-navi__nav-item nav-item -->
-          <div class="main-navi__nav-item nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <a class="nav-link" href="#contact">Contact</a>
-          </div><!-- .main-navi__nav-item nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="main-navi__nav-link nav-link" href="#home">Home</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="main-navi__nav-link nav-link" href="#growth">Growth</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="main-navi__nav-link nav-link" href="#meet-us">Meet Us</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="main-navi__nav-link nav-link" href="#portfolio">Portfolio</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="main-navi__nav-link nav-link" href="#brands">Brands</a>
+          </div><!-- .nav-item -->
+          <div class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <a class="main-navi__nav-link nav-link" href="#contact">Contact</a>
+          </div><!-- .nav-item -->
         </div><!-- .navbar-nav -->
       </div><!-- .navbar-collapse -->
 
