--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="assets/js/popper.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/radialIndicator.min.js"></script>
+    <script type="text/javascript" src="assets/js/zenscroll-min.js"></script>
     <script type="text/javascript" src="assets/js/functions.js"></script>
 
     </body>
