--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -12,8 +12,14 @@
     margin-top: 1rem
     margin-bottom: 1rem
 
-  &__nav-item
-    padding: .9rem 0
+  &__nav-link
+    display: block
+    padding-top: .9rem
+    padding-bottom: .9rem
+
+    &:hover,
+    &:focus
+      background: rgba(0,0,0,.07)
 
 .social-and-toggler-wrapper
   display: flex
