--- a/assets/css/3-sections/_projects-list.sass
+++ b/assets/css/3-sections/_projects-list.sass
@@ -16,6 +16,7 @@
 
   &:after
     content: '- our new project! -'
+    font-size: 1.4rem
     color: #000
     height: 60%
     line-height: 8
@@ -35,54 +36,12 @@
       &:after
         opacity: 1
 
-  /* Modificators */
-  &--1-1
-    background-image: url('../img/projects/1-1.jpg')
-  &--1-2
-    background-image: url('../img/projects/1-2.jpg')
-  &--1-3
-    background-image: url('../img/projects/1-3.jpg')
-  &--1-4
-    background-image: url('../img/projects/1-4.jpg')
-  &--1-5
-    background-image: url('../img/projects/1-5.jpg')
-  &--1-6
-    background-image: url('../img/projects/1-6.jpg')
-  &--1-7
-    background-image: url('../img/projects/1-7.jpg')
-
-  &--2-1
-    background-image: url('../img/projects/2-1.jpg')
-  &--2-2
-    background-image: url('../img/projects/2-2.jpg')
-  &--2-3
-    background-image: url('../img/projects/2-3.jpg')
-  &--2-4
-    background-image: url('../img/projects/2-4.jpg')
-  &--2-5
-    background-image: url('../img/projects/2-5.jpg')
-  &--2-6
-    background-image: url('../img/projects/2-6.jpg')
-  &--2-7
-    background-image: url('../img/projects/2-7.jpg')
-
-  &--3-1
-    background-image: url('../img/projects/3-1.jpg')
-  &--3-2
-    background-image: url('../img/projects/3-2.jpg')
-  &--3-3
-    background-image: url('../img/projects/3-3.jpg')
-  &--3-4
-    background-image: url('../img/projects/3-4.jpg')
-  &--3-5
-    background-image: url('../img/projects/3-5.jpg')
-  &--3-6
-    background-image: url('../img/projects/3-6.jpg')
-  &--3-7
-    background-image: url('../img/projects/3-7.jpg')
-
-  &:nth-child(n+4)
+  &:nth-child(n+4) // hides tiles from 4 to 7 on mobile
     display: none
+
+/* Modificators: from .projects__item--1-1 to ...--3-7
+ * Automatically generates backgrounds of each tile*/
+@include proListLoop
 
 //──── /* Display changes */ ─────────────────────────────────────────────────────────────
 // 480 - base on single item max width = 160px
@@ -95,7 +54,7 @@
     height: 25vw
 
     &:nth-child(4)
-      display: flex
+      display: flex // shows a 4th tile
 
 // 640 - base on single item max width = 160px
 @media (min-width: 40em)
@@ -104,7 +63,7 @@
     height: 20vw
 
     &:nth-child(5)
-      display: flex
+      display: flex // shows a 5th tile
   
 // 800 - base on single item max width = 160px
 @media (min-width: 50em)
@@ -113,7 +72,7 @@
     height: 16.6666666667vw
 
     &:nth-child(6)
-      display: flex
+      display: flex // shows a 6th tile
 
 // 960 - base on single item max width = 160px
 @media (min-width: 60em)
@@ -122,4 +81,4 @@
     height: 14.2857142857vw
 
     &:nth-child(7)
-      display: flex
+      display: flex // shows a 7th tile
